--- a/project/index.html
+++ b/project/index.html
@@ -3,16 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task 1</title>
+    <title>Домашние задания по Web-дизайну</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="rectangle"></div>
-        <div class="rectangle"></div>
-        <div class="rectangle"></div>
-        <div class="rectangle"></div>
-        <div class="rectangle"></div>
-    </div>
+    <header>
+        <h1>Домашние задания по Web-дизайну</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="task1.html">Задание 1</a></li>
+            <li><a href="task2.html">Задание 2</a></li>
+            <li><a href="task3.html">Задание 3</a></li>
+        </ul>
+    </nav>
+    <footer>
+        <p>&copy; 2023 Ваше имя или название сайта</p>
+    </footer>
 </body>
 </html>
