--- a/project/index.html
+++ b/project/index.html
@@ -18,7 +18,7 @@
         </ul>
     </nav>
     <footer>
-        <p>&copy; 2023 Ваше имя или название сайта</p>
+        <p>&copy; 2023 Чайка Жанна</p>
     </footer>
 </body>
 </html>
