--- a/project/task1.2.html
+++ b/project/task1.2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Задание 1</title>
+    <title>Задание 1.2</title>
     <style>
         body, html {
             height: 100%;
@@ -13,8 +13,8 @@
             justify-content: center; /* Выравнивание элементов по центру по горизонтали относительно окна браузера */
         }
         .rectangle {
-            background-color: #94A684;
-            border: 2px solid #618264;
+            background-color: #FEE3EC;
+            border: 2px solid #F999B7;
             position: relative; /* Относительное позиционирование */
         }
         .rectangle:first-child {
