--- a/project/index.html
+++ b/project/index.html
@@ -8,15 +8,19 @@
 </head>
 <body>
     <header>
-        <h1>Домашние задания по Web-дизайну</h1>
-    </header>
+        <h1>⋆｡˚⭒⋆ домашки по веб-дизайну ⋆⭒˚｡⋆</h1>
     <nav>
         <ul>
             <li><a href="task1.2.html">Задание 1.2</a></li>
             <li><a href="task1.3.html">Задание 1.3</a></li>
             <li><a href="task2.html">Задание 2</a></li>
+            <li><a href="task3.html">Задание 3</a></li>
         </ul>
     </nav>
+</header>
+    <main>
+        <img src="images/gary.gif" alt="gary">
+    </main>
     <footer>
         <p>&copy; 2023 Чайка Жанна</p>
     </footer>
