--- a/project/task2.html
+++ b/project/task2.html
@@ -20,6 +20,7 @@
             display: flex;
             align-items: center; 
             justify-content: center; 
+            color: #FEE3EC;
         }
 
         main {
@@ -36,6 +37,7 @@
             display: flex;
             align-items: center; 
             justify-content: center; 
+            color: #F2789F;
         }
 
         article {
@@ -45,6 +47,7 @@
             display: flex;
             align-items: center; 
             justify-content: center;
+            color: #F2789F;
         }
 
         footer {
@@ -55,6 +58,7 @@
             display: flex;
             align-items: center; 
             justify-content: center;
+            color: #FEE3EC;
         }
         
         /* Скрыть все элементы кроме контента при печати */
