--- a/project/task3.html
+++ b/project/task3.html
@@ -6,8 +6,71 @@
     <title>Задание 3</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        Roga    &    Kopyta
+        International worldwide cooperation
+        for horns and hooves storage
+        <img src="images/logo.png" alt="logo">
+        <nav>
+            HORNS STORAGE
+            HOOVES STORAGE
+            OUR ACHIEVMENTS
+            SEASON PRICES
+            CONTACTS
+        </nav>
+    </header>
+    <main>
+        Our history
+        "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium 
+doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore 
+veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam 
+voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
+magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam 
+est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non 
+numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat 
+voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis 
+suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum
+iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, 
+vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+<img src="images/photo.png" alt="photo">
+Horns
+"Sed ut perspiciatis unde omnis iste 
+natus error sit voluptatem accusantium 
+doloremque laudantium, totam rem 
+aperiam, eaque ipsa quae ab illo 
+inventore veritatis et quasi architecto 
+beatae vitae dicta sunt explicabo. Nemo 
+enim ipsam voluptatem quia voluptas sit 
+aspernatur aut odit aut fugit, sed quia 
+consequuntur magni dolores eos qui 
+ratione voluptatem sequi nesciunt.
+Hooves
+"Sed ut perspiciatis unde omnis iste 
+natus error sit voluptatem accusantium 
+doloremque laudantium, totam rem 
+aperiam, eaque ipsa quae ab illo 
+inventore veritatis et quasi architecto 
+beatae vitae dicta sunt explicabo. Nemo 
+enim ipsam voluptatem quia voluptas sit 
+aspernatur aut odit aut fugit, sed quia 
+consequuntur magni dolores eos qui 
+ratione voluptatem sequi nesciunt.
+Achievments
+"Sed ut perspiciatis unde omnis iste 
+natus error sit voluptatem accusantium 
+doloremque laudantium, totam rem 
+aperiam, eaque ipsa quae ab illo 
+inventore veritatis et quasi architecto 
+beatae vitae dicta sunt explicabo. Nemo 
+enim ipsam voluptatem quia voluptas sit 
+aspernatur aut odit aut fugit, sed quia 
+consequuntur magni dolores eos qui 
+ratione voluptatem sequi nesciunt. 
+    </main>
+    <footer>
+        Roga & Kopyta
+        International worlwide cooperation for horns and hooves storage
+        (c) 2013. All rights reserved
+    </footer>
 </body>
 </html>
