--- a/project/task3.html
+++ b/project/task3.html
@@ -19,12 +19,21 @@
 
         .logo-container {
             text-align: center;
-            position: relative; /* Добавляем позиционирование */
+            position: relative;
+            background-image: url('images/logo.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center top;
+            display: flex;
+            flex-direction: column; 
+            justify-content: center; 
+            align-items: center; 
         }
 
         .logo-container img {
             max-width: 10%;
             height: auto;
+            display: block;
         }
 
         nav ul {
@@ -40,6 +49,7 @@
 
         main {
             padding: 20px;
+            font-family: Arial, sans-serif;
         }
 
         footer {
@@ -56,33 +66,27 @@
         }
 
         .custom-title {
-            font-size: 50pt;
+            font-size: 45pt;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            white-space: nowrap;
         }
 
-        /* Media queries for responsive design */
-        @media (max-width: 768px) {
-            .logo-container {
-                text-align: left;
-            }
-
-            nav ul {
-                text-align: left;
-                padding: 10px 0;
-            }
-
-            nav ul li {
-                display: block;
-                margin: 10px 0;
-            }
+        .slogan {
+            color: #cacaca;
         }
+         .ampersand {
+            color: #50372b;
+            font-style: italic;
+            font-size: 45pt;
     </style>
 </head>
 <body>
     <header>
         <div class="logo-container">
-            <img src="images/logo.png" alt="logo">
-            <h1 class="custom-title">Roga    &    Kopyta</h1>
-            <p>International worldwide cooperation<br>for horns and hooves storage</p>
+            <h1 class="custom-title">Roga <span class="ampersand">&</span> Kopyta</h1>
+            <p class="slogan">International worldwide cooperation<br>for horns and hooves storage</p>
         </div>
         <nav>
             <ul>
@@ -96,14 +100,51 @@
     </header>
     <main>
         <h2>Our History</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium 
+            doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore 
+            veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam 
+            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
+            magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam 
+            est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non 
+            numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat 
+            voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis 
+            suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum
+            iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, 
+            vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
         <img src="images/photo.png" alt="photo">
         <h2>Horns</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <p>"Sed ut perspiciatis unde omnis iste 
+            natus error sit voluptatem accusantium 
+            doloremque laudantium, totam rem 
+            aperiam, eaque ipsa quae ab illo 
+            inventore veritatis et quasi architecto 
+            beatae vitae dicta sunt explicabo. Nemo 
+            enim ipsam voluptatem quia voluptas sit 
+            aspernatur aut odit aut fugit, sed quia 
+            consequuntur magni dolores eos qui 
+            ratione voluptatem sequi nesciunt. </p>
         <h2>Hooves</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <p>"Sed ut perspiciatis unde omnis iste 
+            natus error sit voluptatem accusantium 
+            doloremque laudantium, totam rem 
+            aperiam, eaque ipsa quae ab illo 
+            inventore veritatis et quasi architecto 
+            beatae vitae dicta sunt explicabo. Nemo 
+            enim ipsam voluptatem quia voluptas sit 
+            aspernatur aut odit aut fugit, sed quia 
+            consequuntur magni dolores eos qui 
+            ratione voluptatem sequi nesciunt. </p>
         <h2>Achievements</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <p>"Sed ut perspiciatis unde omnis iste 
+            natus error sit voluptatem accusantium 
+            doloremque laudantium, totam rem 
+            aperiam, eaque ipsa quae ab illo 
+            inventore veritatis et quasi architecto 
+            beatae vitae dicta sunt explicabo. Nemo 
+            enim ipsam voluptatem quia voluptas sit 
+            aspernatur aut odit aut fugit, sed quia 
+            consequuntur magni dolores eos qui 
+            ratione voluptatem sequi nesciunt. </p>
     </main>
     <footer>
         Roga & Kopyta
