--- a/project/task1.3.html
+++ b/project/task1.3.html
@@ -16,12 +16,12 @@
             position: absolute;
         }
         .corner-rectangle {
-            width: 45%; /* Ширина 45% от ширины окна браузера */
-            height: 45%; /* Высота 45% от высоты окна браузера */
+            width: 45%;
+            height: 45%;
         }
         .center-rectangle {
-            width: 45%; /* Ширина 45% от ширины окна браузера */
-            height: 45%; /* Высота 45% от высоты окна браузера */
+            width: 45%; 
+            height: 45%;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
