--- a/project/task2.html
+++ b/project/task2.html
@@ -44,10 +44,8 @@
             flex: 1;
             min-height: 400px;
             background-color: #FEE3EC;
-            display: flex;
-            align-items: center; 
-            justify-content: center;
             color: #F2789F;
+            
         }
 
         footer {
@@ -60,10 +58,11 @@
             justify-content: center;
             color: #FEE3EC;
         }
-        
+
         @media print {
             header, nav, footer {
                 display: none;
+
             }
         }
     </style>
@@ -72,7 +71,150 @@
     <header>Шапка</header>
     <main>
         <nav>Меню</nav>
-        <article>Контент</article>
+        <article>We could leave the Christmas lights up 'til January
+            And this is our place, we make the rules
+            And there's a dazzling haze, a mysterious way about you, dear
+            Have I known you twenty seconds or twenty years?
+            Can I go where you go?
+            Can we always be this close?
+            Forever and ever, ah
+            Take me out and take me home
+            You're my, my, my, my lover
+            We could let our friends crash in the living room
+            This is our place, we make the call
+            And I'm highly suspicious that everyone who sees you wants you
+            I've loved you three summers now, honey, but I want 'em all
+            Can I go where you go?
+            Can we always be this close?
+            Forever and ever, ah
+            Take me out and take me home (Forever and ever)
+            You're my, my, my, my lover
+            Ladies and gentlemen, will you please stand?
+            With every guitar string scar on my hand
+            I take this magnetic force of a man to be my lover
+            My heart's been borrowed and yours has been blue
+            All's well that ends well to end up with you
+            Swear to be overdramatic and true to my lover
+            And you'll save all your dirtiest jokes for me
+            And at every table, I'll save you a seat, lover
+            Can I go where you go?
+            Can we always be this close?
+            Forever and ever, ah
+            Take me out and take me home (Forever and ever)
+            You're my, my, my, my
+            Oh, you're my, my, my, my
+            Darling, you're my, my, my, my lover
+            Meet me at midnight
+            Staring at the ceiling with you
+            Oh, you don't ever say too much
+            And you don't really read into
+            My melancholia
+            I been under scrutiny (Yeah, oh, yeah)
+            You handle it beautifully (Yeah, oh, yeah)
+            All this shit is new to me (Yeah, oh, yeah)
+            I feel
+            The lavender haze creeping up on me
+            Surreal
+            I'm damned if I do give a damn what people say
+            No deal
+            The 1950s shit they want from me
+            I just wanna stay in that lavender haze
+            All they keep asking me (All they keep asking me)
+            Is if I'm gonna be your bride
+            The only kinda girl they see (Only kinda girl they see)
+            Is a one-night or a wife
+            I find it dizzying (Yeah, oh, yeah)
+            They're bringing up my history (Yeah, oh, yeah)
+            But you weren't even listening (Yeah, oh, yeah)
+            I feel
+            The lavender haze creepin' up on me
+            Surreal
+            I'm damned if I do give a damn what people say
+            No deal
+            The 1950s shit they want from me
+            I just wanna stay in that lavender haze
+            That lavender haze
+            Talk your talk and go viral
+            I just need this love spiral
+            Get it off your chest
+            Get it off my desk (Get it off my desk)
+            Talk your talk and go viral
+            I just need this love spiral
+            Get it off your chest
+            Get it off my desk
+            I feel (I feel)
+            The lavender haze creeping up on me
+            Surreal
+            I'm damned if I do give a damn what people say
+            No deal (No deal)
+            The 1950s shit they want from me
+            I just wanna stay in that lavender haze
+            Get it off your chest
+            Get it off my desk
+            That lavender haze
+            I just wanna stay
+            I just wanna stay in that lavender haze
+            You're talking shit for the hell of it
+            Addicted to betrayal, but you're relevant
+            You're terrified to look down
+            'Cause if you dare, you'll see the glare
+            Of everyone you burned just to get there
+            It's coming back around
+            And I keep my side of the street clean
+            You wouldn't know what I mean
+            'Cause karma is my boyfriend
+            Karma is a god
+            Karma is the breeze in my hair on the weekend
+            Karma's a relaxing thought
+            Aren't you envious that for you it's not?
+            Sweet like honey, karma is a cat
+            Purring in my lap 'cause it loves me
+            Flexing like a goddamn acrobat
+            Me and karma vibe like that
+            Spiderboy, king of thieves
+            Weave your little webs of opacity
+            My pennies made your crown
+            Trick me once, trick me twice
+            Don't you know that cash ain't the only price?
+            It's coming back around
+            And I keep my side of the street clean
+            You wouldn't know what I mean
+            'Cause karma is my boyfriend
+            Karma is a god
+            Karma is the breeze in my hair on the weekend
+            Karma's a relaxing thought
+            Aren't you envious that for you it's not?
+            Sweet like honey, karma is a cat
+            Purring in my lap 'cause it loves me
+            Flexing like a goddamn acrobat
+            Me and karma vibe like that
+            Ask me what I learned from all those years
+            Ask me what I earned from all those tears
+            Ask me why so many fade, but I'm still here
+            (I'm still here, I'm still here)
+            'Cause karma is the thunder
+            Rattling your ground
+            Karma's on your scent like a bounty hunter
+            Karma's gonna track you down
+            Step by step, from town to town
+            Sweet like justice, karma is a queen
+            Karma takes all my friends to the summit
+            Karma is the guy on the screen
+            Coming straight home to me
+            'Cause karma is my boyfriend (Karma is my boyfriend)
+            Karma is a god
+            Karma is the breeze in my hair on the weekend (Weekend)
+            Karma's a relaxing thought
+            Aren't you envious that for you it's not?
+            Sweet like honey, karma is a cat
+            Purring in my lap 'cause it loves me
+            Flexing like a goddamn acrobat
+            Me and karma vibe like that
+            Karma is my boyfriend
+            Karma is a god (Ah)
+            Uh-huh, mm
+            Karma's a relaxing thought
+        </article>
     </main>
     <footer>Подвал</footer>
 </body>
